fix filter prompt method in promptService